--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <html>
+   <head>
+      <title>yewonkang.github.io</title>
+   </head>
+	
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+   <h1>yewonkang.github.io</h1>
+   <hr>
+   <p>Hello World! We are kimmessicorp.</p>
+   <hr>
+   <h3>Who am I?</h3>
+   <p>I'm YewonKang.</p>
+   <a href="https://yewonkang00.github.io/">YewonKang</a>
+   <hr>
+   <h3>Team members</h3>
+   <p>Our team members are JeongminKim and SeongbinYoon.</p>
+   <a href="Kim-jeongmin.github.io">JeongminKim</a>
+   <p>
+   <a href="https://seongbinyoon.github.io/">SeongbinYoon</a>
+   </p>
+   <hr>
+   <h3>We are going to do an open source project together this semester.</h3>
+
 </body>
+
 </html>
