--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
    <hr>
    <h3>Who am I?</h3>
    <p>I'm YewonKang.</p>
-   <a href="https://yewonkang00.github.io/">YewonKang</a>
+   <a href="https://github.com/yewonkang00/yewonkang00.github.io">YewonKang</a>
+   <p>This is my Github page.</p>
    <hr>
    <h3>Team members</h3>
    <p>Our team members are JeongminKim and SeongbinYoon.</p>
-   <a href="Kim-jeongmin.github.io">JeongminKim</a>
+   <a href="https://kim-jeongmin.github.io/">JeongminKim</a>
    <p>
    <a href="https://seongbinyoon.github.io/">SeongbinYoon</a>
    </p>
