--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
    <head>
-      <title>yewonkang.github.io</title>
+      <title>yewonkang</title>
    </head>
 	
 <body>
-   <h1>yewonkang.github.io</h1>
+   <h1>yewonkang's page!</h1>
    <hr>
    <p>Hello World! We are kimmessicorp.</p>
    <hr>
