--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <hr>
    <h3>Who am I?</h3>
    <p>I'm YewonKang.</p>
-   <a href="https://github.com/yewonkang00/yewonkang00.github.io">YewonKang</a>
+   <a href="https://github.com/yewonkang00">YewonKang</a>
    <p>This is my Github page.</p>
    <hr>
    <h3>Team members</h3>
